force-app/main/default/objects/OneCRM__Saved_List_View__mdt/OneCRM__Saved_List_View__mdt.object-meta.xml
<CustomObject>
    <label>Saved List View</label>
    <pluralLabel>Saved List Views</pluralLabel>
</CustomObject>