force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__Column_Properties__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Column_Properties__c</fullName>
    <label>Column Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>