force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__ColumnLabels__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ColumnLabels__c</fullName>
    <label>Column Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>