force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__ColumnsJSON__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ColumnsJSON__c</fullName>
    <label>Columns JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>