force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__Cross_FiltersJSON__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Cross_FiltersJSON__c</fullName>
    <description>used to store information about list view cross filters</description>
    <label>CrossFiltersJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>