force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__FiltersJSON__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__FiltersJSON__c</fullName>
    <label>Filters JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>