force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>