force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted`</label>
    <type>Checkbox</type>
</CustomField>