force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__Sobject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Sobject_Record_Type__c</fullName>
    <label>Sobject Record Type</label>
    <type>TextArea</type>
</CustomField>