force-app/main/default/objects/OneCRM__Saved_List_View__mdt/fields/OneCRM__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>